[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/RigidBodyParticles2D/RigidBodyParticles2D.gd" type="Script" id=1]

[node name="RigidBodyParticles2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]

[node name="EmitTimer" type="Timer" parent="."]
